<resources>
  <string name="app_name">ColoringApp</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Coloring App</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="draw">Draw</string>
  <string name="color">Color</string>
  <string name="save">Save</string>
  <string name="share">Share</string>


  <string name="start_new">New</string>
  <string name="brush">Brush</string>
  <string name="erase">Erase</string>
  <string name="paint">Paint</string>
  <string name="sml">Small</string>
  <string name="med">Medium</string>
  <string name="lrg">Large</string>
  <string name="sign_in_error">Unable to sign in. Please check your credentials and connection.</string>
  <string name="sign_out">Signout</string>
  <string name="action_licenses"/>
  <string name="send_to">Send To</string>
  <string name="string_key" translatable="false">SMB</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="license">Licenses</string>
</resources>
