<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#FFCCCCCC"
  android:orientation="vertical"
  tools:context=".controler.DrawActivity">

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <ImageButton
      android:id="@+id/new_btn"
      android:layout_width="wrap_content"
      android:layout_height="fill_parent"
      android:contentDescription="@string/start_new"
      android:src="@drawable/new_pic"/>
    <ImageButton
      android:id="@+id/draw_btn"
      android:layout_width="wrap_content"
      android:layout_height="fill_parent"
      android:contentDescription="@string/brush"
      android:src="@drawable/brush"/>
    <ImageButton
      android:id="@+id/erase_btn"
      android:layout_width="wrap_content"
      android:layout_height="fill_parent"
      android:contentDescription="@string/erase"
      android:src="@drawable/eraser"/>
    <ImageButton
      android:id="@+id/save_btn"
      android:layout_width="wrap_content"
      android:layout_height="fill_parent"
      android:contentDescription="@string/save"
      android:src="@drawable/save"/>

  </LinearLayout>
  <edu.cnm.deepdive.coloringapp.view.DrawingView
    android:id="@+id/drawing"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="#FFFFFFFF"/>
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
    <!-- Top Row -->
    <LinearLayout
      android:id="@+id/paint_colors"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FF660000"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#AF660000"/>

      <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FFFF0000"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#AFFF0000"/>

      <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FFFF6600"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#AFFF6600"/>

      <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FFFFCC00"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#AFFFCC00"/>

      <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FF009900"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#AF009900"/>

      <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FF009999"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#AF009999"/>
    </LinearLayout>
    <!-- Bottom Row -->
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FF0000FF"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#AF0000FF"/>

      <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FF990099"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#AF990099"/>

      <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FFFF6666"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#AFFF6666"/>

      <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FFFFFFFF"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#AFFFFFFF"/>

      <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FF787878"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#AF787878"/>

      <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FF000000"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#AF000000"/>
    </LinearLayout>
  </LinearLayout>


</LinearLayout>
